logs/Slang/generated/yosys/sva_sva_not.sv.log
name: sva_sva_not
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_not.sv
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_not.sv:22:2: error: language feature not yet supported
	assert property (
	^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_not.sv:25:24: error: expected expression
		not (ping ##1 !pong [*maxdelay])
		                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/sva/sva_not.sv:29:2: error: language feature not yet supported
	assume property (
	^~~~~~~~~~~~~~~~~
